@@ -1,3 +1,8 @@
+2014-02-07  Paul Thomas  <pault@gcc.gnu.org>
+
+	PR fortran/59906
+	* gfortran.dg/elemental_subroutine_9.f90 : New test
+
 2014-02-04  Uros Bizjak  <ubizjak@gmail.com>
 
 	Backport from mainline
